--- a/db_config.json
+++ b/db_config.json
@@ -9,5 +9,6 @@
     "fdw_port": "5432",
     "fdw_servername": "server1_fdw",
     "fdw_user": "<fdw_user>",
-    "max_workers": 16
+    "max_workers": 16,
+    "static_timestamp": "2025-08-22T14:00:00Z"
 }
